updated application landing page

--- a/gwf_hub/templates/applications.html
+++ b/gwf_hub/templates/applications.html
@@ -21,7 +21,7 @@
                         </div>
                         <div class="card-footer">
                             <div class="nav-tabs-wrapper">
-                                <a href="{% url 'auto-generator' %}" class="btn btn-secondary btn-sm">
+                                <a href="{% url 'albacore-apps' %}" class="btn btn-secondary btn-sm">
                                     Access Albacore Apps
                                 </a>
                             </div>
@@ -42,7 +42,7 @@
                         </div>
                         <div class="card-footer">
                             <div class="nav-tabs-wrapper">
-                                <a href="{% url 'auto-generator' %}" class="btn btn-secondary btn-sm">
+                                <a href="{% url 'paramount-apps' %}" class="btn btn-secondary btn-sm">
                                     Access Paramount Apps
                                 </a>
                             </div>
