added icon to branch and tab on main app. Modified UI to corresponding icons for the apps.

--- a/gwf_hub/templates/applications_paramount.html
+++ b/gwf_hub/templates/applications_paramount.html
@@ -4,19 +4,18 @@
 <div class="main-panel">
     {% include 'navbar.html' %}
     <div class="content">
-        <h2 class="neo-tint">GWF Kernel Dashboard</h2>
+        <h2 class="amazon-main-opaque">Paramount Applications</h2>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xl-3 col-lg-12">
                     <div class="card card-chart">
                         <div class="card-header card-header-success">
                             <div class="ct-chart" id="auto_answer" style="text-align: center;">
-                                <!-- <h1 style="text-align: center;">IMG</h1> -->
                                 <img src="{% static '/imgs/aa.png' %}" alt="Auto Answers Template Generator">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Auto-Answer Templates Generator</h4>
+                            <h4 class="card-title neo-tint">Auto-Answer Templates Generator</h4>
                             <p class="card-category">A template generator for Paramount's Auto-Answers JavaScript Tasks.</p>
                         </div>
                         <div class="card-footer">
@@ -32,12 +31,11 @@
                     <div class="card card-chart">
                         <div class="card-header card-header-danger">
                             <div class="ct-chart" id="payload" style="text-align: center;">
-                                <!-- <h1 style="text-align: center;">IMG</h1> -->
                                 <img src="{% static '/imgs/payloadBuilder.png' %}" alt="">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Payload Builder</h4>
+                            <h4 class="card-title neo-tint">Payload Builder</h4>
                             <p class="card-category">This function is in development. Currently outputs XML for BPMN workflow inputs</p>
                         </div>
                         <div class="card-footer">
@@ -51,14 +49,13 @@
                 </div>
                 <div class="col-xl-3 col-lg-12">
                     <div class="card card-chart">
-                        <div class="card-header card-header-danger">
+                        <div class="card-header card-header-primary">
                             <div class="ct-chart" id="diagnostic_extractor" style="text-align: center;">
-                                <!-- <h1 style="text-align: center;">IMG</h1> -->
-                                <img src="{% static '/imgs/payloadBuilder.png' %}" alt="">
+                                <img src="{% static '/imgs/diagnostic.png' %}" alt="">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Diagnostic Extractor</h4>
+                            <h4 class="card-title neo-tint">Diagnostic Extractor</h4>
                             <p class="card-category">This functionality allows to take diagnostics from a created flow to add to individual tasks within Paramount Workflow Designer.</p>
                         </div>
                         <div class="card-footer">
@@ -72,14 +69,13 @@
                 </div>
                 <div class="col-xl-3 col-lg-12">
                     <div class="card card-chart">
-                        <div class="card-header card-header-danger">
+                        <div class="card-header card-header-warning">
                             <div class="ct-chart" id="task_extractor" style="text-align: center;">
-                                <!-- <h1 style="text-align: center;">IMG</h1> -->
-                                <img src="{% static '/imgs/payloadBuilder.png' %}" alt="">
+                                <img src="{% static '/imgs/data-copy.png' %}" alt="">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Task Extractor</h4>
+                            <h4 class="card-title neo-tint">Task Extractor</h4>
                             <p class="card-category">This function allows the user to copy an existing task from a workflow and paste it into a new container without the need of of pasting the entire flow.</p>
                         </div>
                         <div class="card-footer">
@@ -93,14 +89,13 @@
                 </div>
                 <div class="col-xl-3 col-lg-12">
                     <div class="card card-chart">
-                        <div class="card-header card-header-success">
+                        <div class="card-header card-header-info">
                             <div class="ct-chart" id="question_counter" style="text-align: center;">
-                                <!-- <h1 style="text-align: center;">IMG</h1> -->
                                 <img src="{% static '/imgs/aa.png' %}" alt="Question Coutner">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Question & Answer Counter</h4>
+                            <h4 class="card-title neo-tint">Question & Answer Counter</h4>
                             <p class="card-category">Gathers workflow question and answer count in order to set-up the payload builder</p>
                         </div>
                         <div class="card-footer">
