--- a/gwf_hub/templates/applications_albacore.html
+++ b/gwf_hub/templates/applications_albacore.html
@@ -4,7 +4,7 @@
 <div class="main-panel">
     {% include 'navbar.html' %}
     <div class="content">
-        <h2 class='neo-tint'>GWF Kernel Dashboard</h2>
+        <h2 class='amazon-main-opaque'>Albacore applications</h2>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xl-3 col-lg-12">
@@ -15,7 +15,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Validator</h4>
+                            <h4 class="card-title neo-tint">Validator</h4>
                             <p class="card-category">A simple tool to verify issues and GAPS on  workflows through JSON codes.</p>
                         </div>
                         <div class="card-footer">
@@ -35,7 +35,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Parser</h4>
+                            <h4 class="card-title neo-tint">Parser</h4>
                             <p class="card-category">This function will help you acquire a formatted Source File from an Albacore JSON code flow.</p>
                         </div>
                         <div class="card-footer">
@@ -56,7 +56,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Albacorizer</h4>
+                            <h4 class="card-title neo-tint">Albacorizer</h4>
                             <p class="card-category">This function will take a Source File and convert the data into JSON codes ready to be used in Albacore.</p>
                         </div>
                         <div class="card-footer">
